--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
           </div>
         </div>
       </nav>
-      <div class="center_text">
-          <p>Reach out 👋</p>
-            <p><b>info@iota.ventures</b></p>
+      <div class="center_text bodytext">
+          Reach out 👋<br>
+            info@iota.ventures
     </div>
 </body>
 </html>
