--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
       <br>
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-xs-12 col-md-4">
               <div>
                 <img src="john_josi.jpg" alt="iota_logo">
               </div>
@@ -44,7 +44,7 @@
                 John was born and raised in the Bay Area, moving to San Francisco after graduating from UC Berkeley alongside Chandler and Farbod. He’s held roles in product and commercial strategy, operations and supply chain management, and marketing and advertising. He previously worked in the advertising and Tequila industries, before staking his banner in FinTech. His discerning sense of what makes good Tequila is unparalleled.
               </div>
           </div>
-          <div class="col">
+          <div class="col-xs-12 col-md-4">
             <div>
               <img src="chandler_kowtko.jpg" alt="iota_logo">
             </div>
@@ -56,7 +56,7 @@
                 Chandler spent his early career in the Bay Area in and around wildly ambitious companies across a wide variety of roles, verticals, and stages. 7+ years of finance, ops, product, sales, data science, and software engineering experience in industries such as manufacturing, supply chain, automotive, energy, healthcare, aerospace, telecom, consumer app, and ad networking. Eager to help daring people create the future.
               </div>
         </div>
-        <div class="col">
+        <div class="col-xs-12 col-md-4">
             <div>
               <img src="farbod_nowzad.jpg" alt="iota_logo">
             </div>
@@ -66,9 +66,10 @@
             </div>
             <div class='bodytext'>
               Farbod is the first Data Science graduate from UC Berkeley and is deeply passionate about new technologies and especially their application to consumer products. He has previosuly spent time in software engineering as well as data science roles and now focuses on product design and backend engeering through the lens of a founder. He is passionate about contemporary art, jazz music and coffee.
-              </div>
+            </div>
         </div>
         </div>
       </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
